parse.output
Terminals unused in grammar

   ERR
   SWITCH
   CASE
   DEFAULT
   ELSE


Grammar

    0 $accept: program $end

    1 program: class_declaration_list

    2 class_declaration_list: class_declaration
    3                       | class_declaration_list class_declaration

    4 class_declaration: modificator CLASS IDENT LBRACE class_body RBRACE

    5 modificator: PRIVATE
    6            | PUBLIC
    7            | PROTECTED
    8            | /* empty */

    9 object_modificators: PRIVATE
   10                    | PUBLIC
   11                    | PROTECTED
   12                    | PRIVATE STATIC
   13                    | PUBLIC STATIC
   14                    | PROTECTED STATIC
   15                    | STATIC

   16 class_body: /* empty */
   17           | core_body_sequence

   18 core_body_sequence: core_body
   19                   | core_body_sequence core_body

   20 core_body: statement
   21          | method_declaration
   22          | object_modificators method_declaration
   23          | constructor_declaration
   24          | object_modificators constructor_declaration
   25          | LBRACE RBRACE
   26          | LBRACE core_body_sequence RBRACE

   27 block_body_sequence: block_body_sequence block_body
   28                    | block_body

   29 block_body: statement
   30           | block_statement
   31           | LBRACE RBRACE
   32           | LBRACE block_body_sequence RBRACE

   33 instanciation_list: instanciation_list COMMA instanciation
   34                   | instanciation

   35 instanciation: IDENT ASSIGN creation_object

   36 creation_object: NEW IDENT LPAREN args RPAREN

   37 constructor_declaration: IDENT LPAREN params RPAREN LBRACE constructor_body RBRACE

   38 constructor_body: /* empty */
   39                 | block_body_sequence

   40 method_declaration: premitive_type IDENT LPAREN params RPAREN LBRACE block_body_sequence RBRACE
   41                   | array_type IDENT LPAREN params RPAREN LBRACE block_body_sequence RBRACE
   42                   | VOID IDENT LPAREN params RPAREN LBRACE block_body_sequence RBRACE
   43                   | type_abstract IDENT LPAREN params RPAREN LBRACE block_body_sequence RBRACE
   44                   | premitive_type IDENT LPAREN params RPAREN LBRACE RBRACE
   45                   | array_type IDENT LPAREN params RPAREN LBRACE RBRACE
   46                   | VOID IDENT LPAREN params RPAREN LBRACE RBRACE
   47                   | type_abstract IDENT LPAREN params RPAREN LBRACE RBRACE

   48 params: /* empty */
   49       | param_list

   50 param_list: param_def
   51           | param_list COMMA param_def

   52 param_def: premitive_type IDENT
   53          | array_type IDENT
   54          | type_abstract IDENT

   55 assignment: IDENT ASSIGN expression

   56 assignment_statement: array_access ASSIGN expression
   57                     | qualified_access ASSIGN expression
   58                     | simple_access ASSIGN expression

   59 variables_declaration: type_abstract instanciation_list
   60                      | premitive_type variables_init

   61 constantes_declaration: FINAL type_abstract constantes_init
   62                       | FINAL premitive_type constantes_init

   63 variables_init: variables_init COMMA variable_init
   64               | variable_init

   65 constantes_init: constantes_init COMMA assignment
   66                | assignment

   67 variable_init: IDENT
   68              | assignment

   69 block_statement: print_statement SEMICOLON
   70                | method_call SEMICOLON
   71                | return_statement SEMICOLON
   72                | exception_statement
   73                | if_statement
   74                | while_statement
   75                | for_statement

   76 statement: assignment_statement SEMICOLON
   77          | array_declaration SEMICOLON
   78          | object_modificators array_declaration SEMICOLON
   79          | variables_declaration SEMICOLON
   80          | object_modificators variables_declaration SEMICOLON
   81          | constantes_declaration SEMICOLON
   82          | object_modificators constantes_declaration SEMICOLON

   83 print_statement: SYSTEM DOT OUT DOT PRINTLN LPAREN expression RPAREN

   84 method_prefix: THIS DOT

   85 sufix_methode_list: IDENT DOT
   86                   | sufix_methode_list IDENT DOT

   87 qualified_method_call: method_prefix IDENT LPAREN args RPAREN
   88                      | sufix_methode_list IDENT LPAREN args RPAREN

   89 simple_method_call: IDENT LPAREN args RPAREN

   90 method_call: qualified_method_call
   91            | simple_method_call

   92 args: /* empty */
   93     | arg_list

   94 arg_list: arg_type
   95         | arg_list COMMA arg_type

   96 arg_type: expression
   97         | creation_object

   98 if_statement: IF LPAREN expression RPAREN LBRACE RBRACE
   99             | IF LPAREN expression RPAREN LBRACE block_body_sequence RBRACE

  100 while_statement: WHILE LPAREN expression RPAREN LBRACE block_body_sequence RBRACE
  101                | WHILE LPAREN expression RPAREN LBRACE RBRACE

  102 for_statement: FOR LPAREN for_init SEMICOLON expression SEMICOLON for_update RPAREN LBRACE block_body_sequence RBRACE
  103              | FOR LPAREN for_init SEMICOLON expression SEMICOLON for_update RPAREN LBRACE RBRACE

  104 for_init: assignment
  105         | variables_declaration
  106         | /* empty */

  107 for_update: assignment
  108           | /* empty */

  109 return_statement: RETURN
  110                 | RETURN expression
  111                 | RETURN creation_object

  112 expression: expression PLUS simple_expression
  113           | expression MINUS simple_expression
  114           | expression MULTIPLY simple_expression
  115           | expression DIVIDE simple_expression
  116           | expression MOD simple_expression
  117           | expression EQ simple_expression
  118           | expression NEQ simple_expression
  119           | expression LT simple_expression
  120           | expression GT simple_expression
  121           | expression LTE simple_expression
  122           | expression GTE simple_expression
  123           | expression AND simple_expression
  124           | expression OR simple_expression
  125           | array_access
  126           | method_call
  127           | MINUS expression
  128           | simple_expression

  129 simple_expression: NOT simple_expression
  130                  | LPAREN expression RPAREN
  131                  | qualified_access
  132                  | simple_access
  133                  | NUM
  134                  | STRING_LITERAL

  135 premitive_type: INT
  136               | FLOAT
  137               | BOOLEAN
  138               | CHAR
  139               | DOUBLE
  140               | STRING
  141               | LONG
  142               | SHORT

  143 array_type: premitive_type ARRAYBRACKETS
  144           | IDENT ARRAYBRACKETS

  145 type_abstract: IDENT

  146 array_declaration: array_type IDENT
  147                  | array_type IDENT ASSIGN array_initialization

  148 array_initialization: NEW type_abstract array_dimensions
  149                     | NEW premitive_type array_dimensions
  150                     | LBRACE array_elements RBRACE

  151 array_dimensions: LBRACKET expression RBRACKET
  152                 | array_dimensions LBRACKET expression RBRACKET

  153 array_elements: expression
  154               | array_elements COMMA expression

  155 array_access: qualified_access array_indices
  156             | simple_access array_indices

  157 qualified_access: sufix_methode_list IDENT
  158                 | method_prefix IDENT

  159 simple_access: IDENT

  160 array_indices: LBRACKET expression RBRACKET
  161              | array_indices LBRACKET expression RBRACKET

  162 exception_statement: TRY LBRACE block_body_sequence RBRACE catch_clauses finally_clause_opt
  163                    | TRY LBRACE block_body_sequence RBRACE finally_clause
  164                    | TRY LBRACE RBRACE catch_clauses finally_clause_opt
  165                    | TRY LBRACE RBRACE finally_clause

  166 catch_clauses: catch_clause
  167              | catch_clauses catch_clause

  168 catch_clause: CATCH LPAREN exception_declaration RPAREN LBRACE block_body_sequence RBRACE
  169             | CATCH LPAREN exception_declaration RPAREN LBRACE RBRACE

  170 exception_declaration: type_abstract IDENT

  171 finally_clause: FINALLY LBRACE block_body_sequence RBRACE
  172               | FINALLY LBRACE RBRACE

  173 finally_clause_opt: /* empty */
  174                   | finally_clause


Terminals, with rules where they appear

$end (0) 0
error (256)
BOOLEAN (258) 137
CHAR (259) 138
CLASS (260) 4
DOUBLE (261) 139
FLOAT (262) 136
FINAL (263) 61 62
INT (264) 135
STRING (265) 140
LONG (266) 141
PRIVATE (267) 5 9 12
PROTECTED (268) 7 11 14
VOID (269) 42 46
PUBLIC (270) 6 10 13
SHORT (271) 142
RETURN (272) 109 110 111
NEW (273) 36 148 149
THIS (274) 84
STATIC (275) 12 13 14 15
ASSIGN (276) 35 55 56 57 58 147
EQ (277) 117
NEQ (278) 118
LT (279) 119
GT (280) 120
LTE (281) 121
GTE (282) 122
AND (283) 123
OR (284) 124
NOT (285) 129
PLUS (286) 112
MINUS (287) 113 127
MULTIPLY (288) 114
DIVIDE (289) 115
MOD (290) 116
STRING_LITERAL (291) 134
LPAREN (292) 36 37 40 41 42 43 44 45 46 47 83 87 88 89 98 99 100 101
    102 103 130 168 169
RPAREN (293) 36 37 40 41 42 43 44 45 46 47 83 87 88 89 98 99 100 101
    102 103 130 168 169
LBRACE (294) 4 25 26 31 32 37 40 41 42 43 44 45 46 47 98 99 100 101
    102 103 150 162 163 164 165 168 169 171 172
RBRACE (295) 4 25 26 31 32 37 40 41 42 43 44 45 46 47 98 99 100 101
    102 103 150 162 163 164 165 168 169 171 172
LBRACKET (296) 151 152 160 161
RBRACKET (297) 151 152 160 161
ARRAYBRACKETS (298) 143 144
SEMICOLON (299) 69 70 71 76 77 78 79 80 81 82 102 103
COMMA (300) 33 51 63 65 95 154
DOT (301) 83 84 85 86
IDENT (302) 4 35 36 37 40 41 42 43 44 45 46 47 52 53 54 55 67 85 86
    87 88 89 144 145 146 147 157 158 159 170
NUM (303) 133
ERR (304)
SYSTEM (305) 83
OUT (306) 83
PRINTLN (307) 83
TRY (308) 162 163 164 165
CATCH (309) 168 169
FINALLY (310) 171 172
IF (311) 98 99
WHILE (312) 100 101
FOR (313) 102 103
SWITCH (314)
CASE (315)
DEFAULT (316)
ELSE (317)
UMINUS (318)


Nonterminals, with rules where they appear

$accept (64)
    on left: 0
program (65)
    on left: 1, on right: 0
class_declaration_list (66)
    on left: 2 3, on right: 1 3
class_declaration (67)
    on left: 4, on right: 2 3
modificator (68)
    on left: 5 6 7 8, on right: 4
object_modificators (69)
    on left: 9 10 11 12 13 14 15, on right: 22 24 78 80 82
class_body (70)
    on left: 16 17, on right: 4
core_body_sequence (71)
    on left: 18 19, on right: 17 19 26
core_body (72)
    on left: 20 21 22 23 24 25 26, on right: 18 19
block_body_sequence (73)
    on left: 27 28, on right: 27 32 39 40 41 42 43 99 100 102 162 163
    168 171
block_body (74)
    on left: 29 30 31 32, on right: 27 28
instanciation_list (75)
    on left: 33 34, on right: 33 59
instanciation (76)
    on left: 35, on right: 33 34
creation_object (77)
    on left: 36, on right: 35 97 111
constructor_declaration (78)
    on left: 37, on right: 23 24
constructor_body (79)
    on left: 38 39, on right: 37
method_declaration (80)
    on left: 40 41 42 43 44 45 46 47, on right: 21 22
params (81)
    on left: 48 49, on right: 37 40 41 42 43 44 45 46 47
param_list (82)
    on left: 50 51, on right: 49 51
param_def (83)
    on left: 52 53 54, on right: 50 51
assignment (84)
    on left: 55, on right: 65 66 68 104 107
assignment_statement (85)
    on left: 56 57 58, on right: 76
variables_declaration (86)
    on left: 59 60, on right: 79 80 105
constantes_declaration (87)
    on left: 61 62, on right: 81 82
variables_init (88)
    on left: 63 64, on right: 60 63
constantes_init (89)
    on left: 65 66, on right: 61 62 65
variable_init (90)
    on left: 67 68, on right: 63 64
block_statement (91)
    on left: 69 70 71 72 73 74 75, on right: 30
statement (92)
    on left: 76 77 78 79 80 81 82, on right: 20 29
print_statement (93)
    on left: 83, on right: 69
method_prefix (94)
    on left: 84, on right: 87 158
sufix_methode_list (95)
    on left: 85 86, on right: 86 88 157
qualified_method_call (96)
    on left: 87 88, on right: 90
simple_method_call (97)
    on left: 89, on right: 91
method_call (98)
    on left: 90 91, on right: 70 126
args (99)
    on left: 92 93, on right: 36 87 88 89
arg_list (100)
    on left: 94 95, on right: 93 95
arg_type (101)
    on left: 96 97, on right: 94 95
if_statement (102)
    on left: 98 99, on right: 73
while_statement (103)
    on left: 100 101, on right: 74
for_statement (104)
    on left: 102 103, on right: 75
for_init (105)
    on left: 104 105 106, on right: 102 103
for_update (106)
    on left: 107 108, on right: 102 103
return_statement (107)
    on left: 109 110 111, on right: 71
expression (108)
    on left: 112 113 114 115 116 117 118 119 120 121 122 123 124 125
    126 127 128, on right: 55 56 57 58 83 96 98 99 100 101 102 103
    110 112 113 114 115 116 117 118 119 120 121 122 123 124 127 130
    151 152 153 154 160 161
simple_expression (109)
    on left: 129 130 131 132 133 134, on right: 112 113 114 115 116
    117 118 119 120 121 122 123 124 128 129
premitive_type (110)
    on left: 135 136 137 138 139 140 141 142, on right: 40 44 52 60
    62 143 149
array_type (111)
    on left: 143 144, on right: 41 45 53 146 147
type_abstract (112)
    on left: 145, on right: 43 47 54 59 61 148 170
array_declaration (113)
    on left: 146 147, on right: 77 78
array_initialization (114)
    on left: 148 149 150, on right: 147
array_dimensions (115)
    on left: 151 152, on right: 148 149 152
array_elements (116)
    on left: 153 154, on right: 150 154
array_access (117)
    on left: 155 156, on right: 56 125
qualified_access (118)
    on left: 157 158, on right: 57 131 155
simple_access (119)
    on left: 159, on right: 58 132 156
array_indices (120)
    on left: 160 161, on right: 155 156 161
exception_statement (121)
    on left: 162 163 164 165, on right: 72
catch_clauses (122)
    on left: 166 167, on right: 162 164 167
catch_clause (123)
    on left: 168 169, on right: 166 167
exception_declaration (124)
    on left: 170, on right: 168 169
finally_clause (125)
    on left: 171 172, on right: 163 165 174
finally_clause_opt (126)
    on left: 173 174, on right: 162 164


state 0

    0 $accept: . program $end

    PRIVATE    shift, and go to state 1
    PROTECTED  shift, and go to state 2
    PUBLIC     shift, and go to state 3

    $default  reduce using rule 8 (modificator)

    program                 go to state 4
    class_declaration_list  go to state 5
    class_declaration       go to state 6
    modificator             go to state 7


state 1

    5 modificator: PRIVATE .

    $default  reduce using rule 5 (modificator)


state 2

    7 modificator: PROTECTED .

    $default  reduce using rule 7 (modificator)


state 3

    6 modificator: PUBLIC .

    $default  reduce using rule 6 (modificator)


state 4

    0 $accept: program . $end

    $end  shift, and go to state 8


state 5

    1 program: class_declaration_list .
    3 class_declaration_list: class_declaration_list . class_declaration

    PRIVATE    shift, and go to state 1
    PROTECTED  shift, and go to state 2
    PUBLIC     shift, and go to state 3

    CLASS     reduce using rule 8 (modificator)
    $default  reduce using rule 1 (program)

    class_declaration  go to state 9
    modificator        go to state 7


state 6

    2 class_declaration_list: class_declaration .

    $default  reduce using rule 2 (class_declaration_list)


state 7

    4 class_declaration: modificator . CLASS IDENT LBRACE class_body RBRACE

    CLASS  shift, and go to state 10


state 8

    0 $accept: program $end .

    $default  accept


state 9

    3 class_declaration_list: class_declaration_list class_declaration .

    $default  reduce using rule 3 (class_declaration_list)


state 10

    4 class_declaration: modificator CLASS . IDENT LBRACE class_body RBRACE

    IDENT  shift, and go to state 11


state 11

    4 class_declaration: modificator CLASS IDENT . LBRACE class_body RBRACE

    LBRACE  shift, and go to state 12


state 12

    4 class_declaration: modificator CLASS IDENT LBRACE . class_body RBRACE

    BOOLEAN    shift, and go to state 13
    CHAR       shift, and go to state 14
    DOUBLE     shift, and go to state 15
    FLOAT      shift, and go to state 16
    FINAL      shift, and go to state 17
    INT        shift, and go to state 18
    STRING     shift, and go to state 19
    LONG       shift, and go to state 20
    PRIVATE    shift, and go to state 21
    PROTECTED  shift, and go to state 22
    VOID       shift, and go to state 23
    PUBLIC     shift, and go to state 24
    SHORT      shift, and go to state 25
    THIS       shift, and go to state 26
    STATIC     shift, and go to state 27
    LBRACE     shift, and go to state 28
    IDENT      shift, and go to state 29

    $default  reduce using rule 16 (class_body)

    object_modificators      go to state 30
    class_body               go to state 31
    core_body_sequence       go to state 32
    core_body                go to state 33
    constructor_declaration  go to state 34
    method_declaration       go to state 35
    assignment_statement     go to state 36
    variables_declaration    go to state 37
    constantes_declaration   go to state 38
    statement                go to state 39
    method_prefix            go to state 40
    sufix_methode_list       go to state 41
    premitive_type           go to state 42
    array_type               go to state 43
    type_abstract            go to state 44
    array_declaration        go to state 45
    array_access             go to state 46
    qualified_access         go to state 47
    simple_access            go to state 48


state 13

  137 premitive_type: BOOLEAN .

    $default  reduce using rule 137 (premitive_type)


state 14

  138 premitive_type: CHAR .

    $default  reduce using rule 138 (premitive_type)


state 15

  139 premitive_type: DOUBLE .

    $default  reduce using rule 139 (premitive_type)


state 16

  136 premitive_type: FLOAT .

    $default  reduce using rule 136 (premitive_type)


state 17

   61 constantes_declaration: FINAL . type_abstract constantes_init
   62                       | FINAL . premitive_type constantes_init

    BOOLEAN  shift, and go to state 13
    CHAR     shift, and go to state 14
    DOUBLE   shift, and go to state 15
    FLOAT    shift, and go to state 16
    INT      shift, and go to state 18
    STRING   shift, and go to state 19
    LONG     shift, and go to state 20
    SHORT    shift, and go to state 25
    IDENT    shift, and go to state 49

    premitive_type  go to state 50
    type_abstract   go to state 51


state 18

  135 premitive_type: INT .

    $default  reduce using rule 135 (premitive_type)


state 19

  140 premitive_type: STRING .

    $default  reduce using rule 140 (premitive_type)


state 20

  141 premitive_type: LONG .

    $default  reduce using rule 141 (premitive_type)


state 21

    9 object_modificators: PRIVATE .
   12                    | PRIVATE . STATIC

    STATIC  shift, and go to state 52

    $default  reduce using rule 9 (object_modificators)


state 22

   11 object_modificators: PROTECTED .
   14                    | PROTECTED . STATIC

    STATIC  shift, and go to state 53

    $default  reduce using rule 11 (object_modificators)


state 23

   42 method_declaration: VOID . IDENT LPAREN params RPAREN LBRACE block_body_sequence RBRACE
   46                   | VOID . IDENT LPAREN params RPAREN LBRACE RBRACE

    IDENT  shift, and go to state 54


state 24

   10 object_modificators: PUBLIC .
   13                    | PUBLIC . STATIC

    STATIC  shift, and go to state 55

    $default  reduce using rule 10 (object_modificators)


state 25

  142 premitive_type: SHORT .

    $default  reduce using rule 142 (premitive_type)


state 26

   84 method_prefix: THIS . DOT

    DOT  shift, and go to state 56


state 27

   15 object_modificators: STATIC .

    $default  reduce using rule 15 (object_modificators)


state 28

   25 core_body: LBRACE . RBRACE
   26          | LBRACE . core_body_sequence RBRACE

    BOOLEAN    shift, and go to state 13
    CHAR       shift, and go to state 14
    DOUBLE     shift, and go to state 15
    FLOAT      shift, and go to state 16
    FINAL      shift, and go to state 17
    INT        shift, and go to state 18
    STRING     shift, and go to state 19
    LONG       shift, and go to state 20
    PRIVATE    shift, and go to state 21
    PROTECTED  shift, and go to state 22
    VOID       shift, and go to state 23
    PUBLIC     shift, and go to state 24
    SHORT      shift, and go to state 25
    THIS       shift, and go to state 26
    STATIC     shift, and go to state 27
    LBRACE     shift, and go to state 28
    RBRACE     shift, and go to state 57
    IDENT      shift, and go to state 29

    object_modificators      go to state 30
    core_body_sequence       go to state 58
    core_body                go to state 33
    constructor_declaration  go to state 34
    method_declaration       go to state 35
    assignment_statement     go to state 36
    variables_declaration    go to state 37
    constantes_declaration   go to state 38
    statement                go to state 39
    method_prefix            go to state 40
    sufix_methode_list       go to state 41
    premitive_type           go to state 42
    array_type               go to state 43
    type_abstract            go to state 44
    array_declaration        go to state 45
    array_access             go to state 46
    qualified_access         go to state 47
    simple_access            go to state 48


state 29

   37 constructor_declaration: IDENT . LPAREN params RPAREN LBRACE constructor_body RBRACE
   85 sufix_methode_list: IDENT . DOT
  144 array_type: IDENT . ARRAYBRACKETS
  145 type_abstract: IDENT .
  159 simple_access: IDENT .

    LPAREN         shift, and go to state 59
    ARRAYBRACKETS  shift, and go to state 60
    DOT            shift, and go to state 61

    IDENT     reduce using rule 145 (type_abstract)
    $default  reduce using rule 159 (simple_access)


state 30
